remove commented lines
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>